depl-k8s-istio/python/api.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-node
  labels:
    app: istio-node
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: istio-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-node-v1
  labels:
    version: v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: istio-node
      version: v1
  template:
    metadata:
      labels:
        app: istio-node
        version: v1
    spec:
      containers:
      - name: istio-node
        image: docker.io/vinho0onguyen/my_api:v1
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-node-v2
  labels:
    version: v2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: istio-node
      version: v2
  template:
    metadata:
      labels:
        app: istio-node
        version: v2
    spec:
      containers:
      - name: meetup-node
        image: docker.io/vinho0onguyen/my_api:v2
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
