depl-k8s-istio/python/virt-svc.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiodemoservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - name: api-v1
    match:
    - uri:
        prefix: "/notice/a"
    - uri:
        prefix: "/notice/b"
    route:
    - destination:
        host: notice-service
        port:
          number: 5000

  - name: api-v2
    match:
    - uri:
        prefix: "/mail/a"
    - uri:
        prefix: "/mail/b"
    route:
    - destination:
        host: mail-service
        port:
          number: 5000
